novice-core-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-core
  template:
    metadata:
      labels:
        app: backend-core
    spec:
      containers:
      - name: backend-core
        image: noviceacr.azurecr.io/novice-core-back-end:1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend-core
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: backend-core
