novice-neo4j-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo4j
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo4j
  template:
    metadata:
      labels:
        app: neo4j
    spec:
      containers:
      - name: neo4j
        image: noviceacr.azurecr.io/neo4j:4.3.2-enterprise
        ports:
          - containerPort: 7474
            name: http
          - containerPort: 7473
            name: bolt
          - containerPort: 7687
            name: https
      volumes:
          - name: neo4j-disk
            azureDisk:
              kind: Managed
              diskName: "my-neo4j-disk"
              diskURI: /subscriptions/3437dbd6-cf52-48e2-b588-35a0fab6a413/resourceGroups/novice-app/providers/Microsoft.Compute/disks/my-neo4j-disk
---
apiVersion: v1
kind: Service
metadata:
  name: neo4j
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 7474
    targetPort: 7474
    protocol: TCP
  - name: https
    port: 7473
    targetPort: 7473
    protocol: TCP
  - name: bolt
    port: 7687
    targetPort: 7687
    protocol: TCP
  selector:
    app: neo4j
---
