novice-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /backend/core(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-core
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: novice
            port:
              number: 80
